[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio-postgres = "0.7.7"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
dotenv = "0.15.0"
serde = { version = "1.0.137", features = ["derive"] }
config = "0.13.1"
deadpool-postgres = { version = "0.10.2", features = ["serde"] }
actix-cors = "0.6.4"
reqwest = "0.11.14"
