[package]
name = "tailwindcss-yew-template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
reqwest-wasm = "0.11.0"
wasm-logger = "0.2.0"
log = "0.4.16"
wasm-bindgen-futures = "0.4.30"
serde = { version = "1.0.48", features = ["derive"] }
serde_json = "1.0.79"
dotenv = "0.15.0"
wasm-bindgen = "0.2.84"
web-sys = "0.3.61"
js-sys = "0.3.61"
gloo-utils = "0.1.6"
yew-router = "0.17.0"



